:sparkles: Add crud
